--- a/notebooks/kerasLSTMsSocial.ipynb
+++ b/notebooks/kerasLSTMsSocial.ipynb
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -159,27 +159,27 @@
       "____________________________________________________________________________________________________\n",
       "Layer (type)                       Output Shape        Param #     Connected to                     \n",
       "====================================================================================================\n",
-      "lstm_7 (LSTM)                      (1, 1, 200)         240800      lstm_input_3[0][0]               \n",
+      "lstm_1 (LSTM)                      (1, 1, 200)         240800      lstm_input_1[0][0]               \n",
       "____________________________________________________________________________________________________\n",
-      "dropout_11 (Dropout)               (1, 1, 200)         0           lstm_7[0][0]                     \n",
+      "dropout_1 (Dropout)                (1, 1, 200)         0           lstm_1[0][0]                     \n",
       "____________________________________________________________________________________________________\n",
-      "lstm_8 (LSTM)                      (1, 1, 100)         120400      dropout_11[0][0]                 \n",
+      "lstm_2 (LSTM)                      (1, 1, 100)         120400      dropout_1[0][0]                  \n",
       "____________________________________________________________________________________________________\n",
-      "dropout_12 (Dropout)               (1, 1, 100)         0           lstm_8[0][0]                     \n",
+      "dropout_2 (Dropout)                (1, 1, 100)         0           lstm_2[0][0]                     \n",
       "____________________________________________________________________________________________________\n",
-      "lstm_9 (LSTM)                      (1, 50)             30200       dropout_12[0][0]                 \n",
+      "lstm_3 (LSTM)                      (1, 50)             30200       dropout_2[0][0]                  \n",
       "____________________________________________________________________________________________________\n",
-      "dropout_13 (Dropout)               (1, 50)             0           lstm_9[0][0]                     \n",
+      "dropout_3 (Dropout)                (1, 50)             0           lstm_3[0][0]                     \n",
       "____________________________________________________________________________________________________\n",
-      "dense_7 (Dense)                    (1, 50)             2550        dropout_13[0][0]                 \n",
+      "dense_1 (Dense)                    (1, 50)             2550        dropout_3[0][0]                  \n",
       "____________________________________________________________________________________________________\n",
-      "dropout_14 (Dropout)               (1, 50)             0           dense_7[0][0]                    \n",
+      "dropout_4 (Dropout)                (1, 50)             0           dense_1[0][0]                    \n",
       "____________________________________________________________________________________________________\n",
-      "dense_8 (Dense)                    (1, 20)             1020        dropout_14[0][0]                 \n",
+      "dense_2 (Dense)                    (1, 20)             1020        dropout_4[0][0]                  \n",
       "____________________________________________________________________________________________________\n",
-      "dropout_15 (Dropout)               (1, 20)             0           dense_8[0][0]                    \n",
+      "dropout_5 (Dropout)                (1, 20)             0           dense_2[0][0]                    \n",
       "____________________________________________________________________________________________________\n",
-      "dense_9 (Dense)                    (1, 4)              84          dropout_15[0][0]                 \n",
+      "dense_3 (Dense)                    (1, 4)              84          dropout_5[0][0]                  \n",
       "====================================================================================================\n",
       "Total params: 395054\n",
       "____________________________________________________________________________________________________\n",
@@ -1197,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -1210,8 +1210,9 @@
       "(1044,)\n",
       "1044\n",
       "(4472, 15)\n",
-      "[ 0.19  0.    0.2   0.11  0.    0.14  0.03  0.01  0.15  0.08  0.01  0.\n",
-      "  0.01  0.07  0.01]\n"
+      "[ 0.19157088  0.          0.20210728  0.10632184  0.00287356  0.13984674\n",
+      "  0.02873563  0.00670498  0.14750958  0.08045977  0.00862069  0.00191571\n",
+      "  0.00574713  0.06609195  0.01149425]\n"
      ]
     }
    ],
@@ -3259,20 +3260,198 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded model from disk\n",
+      "Performance of ActivitySocial model on test set ----------------------------\n",
+      "Accuracy:\n",
+      "0.556513409962\n",
+      "Confusion matrix:\n",
+      "[[169  13   0   0  13   0   0   1   2   0   0   2   0   0]\n",
+      " [  9 164  11   0   6   0   0  16   1   0   0   0   4   0]\n",
+      " [  2  63  37   0   0   0   0   3   0   4   0   0   2   0]\n",
+      " [  0   0   2   0   0   0   0   0   0   1   0   0   0   0]\n",
+      " [ 32  28   1   0  60   3   0  10   6   0   0   2   4   0]\n",
+      " [  0   9   6   0   0   2   0   1   0   0   0   0  12   0]\n",
+      " [  1   3   1   0   0   0   2   0   0   0   0   0   0   0]\n",
+      " [  3  31   9   3   2   1   0  94   2   0   0   7   0   2]\n",
+      " [ 29   7   0   1   8   0   0   0  32   0   0   7   0   0]\n",
+      " [  0   2   2   0   0   0   0   0   0   2   0   0   3   0]\n",
+      " [  0   2   0   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [  4   0   1   0   0   0   0   1   0   0   0   0   0   0]\n",
+      " [  0  13  27   0   1   0   0   3   0   6   0   0  19   0]\n",
+      " [  1   6   0   0   0   0   0   1   0   0   0   0   4   0]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Do the Social LSTM with all 7000 features"
+    "from sklearn.metrics import confusion_matrix, roc_auc_score, accuracy_score\n",
+    "from keras.models import model_from_json\n",
+    "import numpy\n",
+    "import os\n",
+    "\n",
+    "def load_model_weights(modelfile, weightsfile, lossmethod='categorical_crossentropy', optmethod='adam'):\n",
+    "    json_file = open(modelfile,'r')\n",
+    "    loaded_model_json = json_file.read()\n",
+    "    json_file.close()\n",
+    "    loaded_model = model_from_json(loaded_model_json)\n",
+    "    # load weights into new model\n",
+    "    loaded_model.load_weights(weightsfile)\n",
+    "    print(\"Loaded model from disk\")\n",
+    "    # evaluate loaded model on test data\n",
+    "    loaded_model.compile(loss=lossmethod, optimizer=optmethod, metrics=['accuracy'])\n",
+    "    return loaded_model\n",
+    "\n",
+    "def printValStats(model, testX, dummy_y_test):\n",
+    "    # Other performance/accuracy metrics\n",
+    "    Y_pred = model.predict(testX, batch_size=batch_size)\n",
+    "    model.reset_states()\n",
+    "    print 'Performance of model on test set ----------------------------'\n",
+    "    # Accuracy\n",
+    "    print('Accuracy:')\n",
+    "    print(accuracy_score(numpy.argmax(dummy_y_test, axis=1), numpy.argmax(Y_pred, axis=1)))\n",
+    "    # Confusion matrix\n",
+    "    cm = confusion_matrix(numpy.argmax(dummy_y_test, axis=1), numpy.argmax(Y_pred, axis=1))\n",
+    "    numpy.set_printoptions(precision=2)\n",
+    "    print('Confusion matrix:')\n",
+    "    print(cm)\n",
+    "    # AUC\n",
+    "    roc = roc_auc_score(dummy_y_test, Y_pred, average='macro')\n",
+    "    print('AUC score:')\n",
+    "    print(roc)\n",
+    "\n",
+    "batch_size=1\n",
+    "    \n",
+    "# We load the activitysocial model, and predict on the test set, and evaluate\n",
+    "model = load_model_weights('activitysocial.model--3lstm.json', 'activitysocial.weights--3lstm--acc55.hdf5')\n",
+    "Y_pred = model.predict(testX, batch_size=batch_size)\n",
+    "model.reset_states()\n",
+    "print 'Performance of ActivitySocial model on test set ----------------------------'\n",
+    "# Accuracy\n",
+    "print('Accuracy:')\n",
+    "print(accuracy_score(numpy.argmax(dummy_y_test_both, axis=1), numpy.argmax(Y_pred, axis=1)))\n",
+    "# Confusion matrix\n",
+    "cm = confusion_matrix(numpy.argmax(dummy_y_test_both, axis=1), numpy.argmax(Y_pred, axis=1))\n",
+    "numpy.set_printoptions(precision=2)\n",
+    "print('Confusion matrix:')\n",
+    "print(cm)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1044 1044 1044\n",
+      "Activity scores from a dual prediction:\n",
+      "Accuracy 0.649425287356\n",
+      "Confusion matrix:\n",
+      "[[169  13  14   2   2]\n",
+      " [ 11 277  25   6   6]\n",
+      " [ 36  91 175   8  27]\n",
+      " [ 29  14   8  34  10]\n",
+      " [  5  47   6   6  23]]\n",
+      "AUC 0.736823223866\n",
+      "===========================================\n",
+      "Activity scores from a dual prediction:\n",
+      "Accuracy 0.777777777778\n",
+      "Confusion matrix:\n",
+      "[[594  24   1  28]\n",
+      " [ 90 122   0   7]\n",
+      " [ 13   8   2   1]\n",
+      " [ 45  10   5  94]]\n",
+      "AUC 0.71235589745\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Decode the predictions back to the original values\n",
+    "encoded_pred = numpy.argmax(Y_pred, axis=1)\n",
+    "both_pred = encoder.inverse_transform(encoded_pred)\n",
+    "\n",
+    "# Split the predictions into activity and social\n",
+    "def split_act_soc(input):\n",
+    "    act_pred = []\n",
+    "    soc_pred = []\n",
+    "    for value in input:\n",
+    "        if value.startswith('Other'):\n",
+    "            act_pred.append('Other')\n",
+    "            soc_pred.append(value[5:])\n",
+    "        elif value.startswith('EXP'):\n",
+    "            act_pred.append('EXP')\n",
+    "            soc_pred.append(value[3:])\n",
+    "        elif value.startswith('MON'):\n",
+    "            act_pred.append('MON')\n",
+    "            soc_pred.append(value[3:])\n",
+    "        elif value.startswith('REP'):\n",
+    "            act_pred.append('REP')\n",
+    "            soc_pred.append(value[3:])\n",
+    "        elif value.startswith('QUE'):\n",
+    "            act_pred.append('QUE')\n",
+    "            soc_pred.append(value[3:])\n",
+    "        else:\n",
+    "            print 'Unexpected value!!'\n",
+    "            return\n",
+    "    return act_pred, soc_pred\n",
+    "\n",
+    "act_pred, soc_pred = split_act_soc(both_pred)\n",
+    "\n",
+    "print len(both_pred), len(act_pred), len(soc_pred)\n",
+    "\n",
+    "# Create Activity and social ground truth (again)\n",
+    "Y_testAct = test[:,7558]\n",
+    "Y_testSoc = test[:,7559]\n",
+    "\n",
+    "encoderA = LabelEncoder()\n",
+    "encoderA.fit(Y_testAct)\n",
+    "encoded_Y_testAct = encoderA.transform(Y_testAct)\n",
+    "encoded_Y_predAct = encoderA.transform(act_pred)\n",
+    "dummy_y_testAct = to_categorical(encoded_Y_testAct)\n",
+    "dummy_y_predAct = to_categorical(encoded_Y_predAct)\n",
+    "encoderS = LabelEncoder()\n",
+    "encoderS.fit(Y_testSoc)\n",
+    "encoded_Y_testSoc = encoderS.transform(Y_testSoc)\n",
+    "encoded_Y_predSoc = encoderS.transform(soc_pred)\n",
+    "dummy_y_testSoc = to_categorical(encoded_Y_testSoc)\n",
+    "dummy_y_predSoc = to_categorical(encoded_Y_predSoc)\n",
+    "\n",
+    "\n",
+    "# Evaluate activity and social predictions separately\n",
+    "print 'Activity scores from a dual prediction:'\n",
+    "print 'Accuracy', accuracy_score(Y_testAct, act_pred)\n",
+    "print 'Confusion matrix:\\n', confusion_matrix(Y_testAct, act_pred)\n",
+    "print 'AUC', roc_auc_score(dummy_y_testAct, dummy_y_predAct, average='macro')\n",
+    "\n",
+    "print '==========================================='\n",
+    "print 'Activity scores from a dual prediction:'\n",
+    "print 'Accuracy', accuracy_score(Y_testSoc, soc_pred)\n",
+    "print 'Confusion matrix:\\n', confusion_matrix(Y_testSoc, soc_pred)\n",
+    "print 'AUC', roc_auc_score(dummy_y_testSoc, dummy_y_predSoc, average='macro')\n",
+    "\n",
+    "\n",
+    "# How does it compare with the best activity (acc65, auc83) and social (acc79, auc81)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Thus, the dual prediction performs quite well, but does not beat our best separate models"
+   ]
   }
  ],
  "metadata": {
