--- a/notebooks/kerasLSTMs-Deeper.ipynb
+++ b/notebooks/kerasLSTMs-Deeper.ipynb
@@ -577,7 +577,7 @@
     "    print('Epoch', i+1, '/', epochs)\n",
     "    history = modelA2.fit(trainX, dummy_y_trainA, validation_data=(testX, dummy_y_testA), \n",
     "                        nb_epoch=1, batch_size=batch, shuffle=False, \n",
-    "                        verbose=1, callbacks=callbacks_list)\n",
+    "                        verbose=1, callbacks=callbacks_listA2)\n",
     "    modelA2.reset_states()\n",
     "    kappa, auc = printValStats(modelA2, testX, dummy_y_testA, batch=batch)\n",
     "    accs.append(history.history['acc'][0])\n",
@@ -623,7 +623,7 @@
     "filepathA1=\"activity.weights--1lstmbis.best.hdf5\"\n",
     "# Define that the accuracy in cv is monitored, and that weights are stored in a file when max accuracy is achieved\n",
     "checkpointA1 = ModelCheckpoint(filepathA1, monitor='val_acc', verbose=1, save_best_only=True, mode='max')\n",
-    "callbacks_list = [checkpointA1]\n",
+    "callbacks_listA1 = [checkpointA1]\n",
     "\n",
     "# Fit the model\n",
     "accs =[]\n",
@@ -639,7 +639,7 @@
     "    print('Epoch', i+1, '/', epochs)\n",
     "    history = modelA1.fit(trainX, dummy_y_trainA, validation_data=(testX, dummy_y_testA), \n",
     "                        nb_epoch=1, batch_size=batch, shuffle=False, \n",
-    "                        verbose=1, callbacks=callbacks_list)\n",
+    "                        verbose=1, callbacks=callbacks_listA1)\n",
     "    modelA1.reset_states()\n",
     "    kappa, auc = printValStats(modelA1, testX, dummy_y_testA, batch=batch)\n",
     "    accs.append(history.history['acc'][0])\n",
