--- a/notebooks/kerasLSTMs-Deeper-Social.ipynb
+++ b/notebooks/kerasLSTMs-Deeper-Social.ipynb
@@ -5591,6 +5591,13 @@
     "print 'Best validation AUC: ', get_max_values(aucs)\n",
     "plot_training(accs, val_accs, losss, val_losss, kappas, aucs)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So, apparently, the 3-layer LSTM gets slightly better results than shallower RNNs"
+   ]
   }
  ],
  "metadata": {
