Added second round of LSTMs for activity detection

--- a/notebooks/kerasLSTMs-Deeper.ipynb
+++ b/notebooks/kerasLSTMs-Deeper.ipynb
@@ -53,8 +53,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false,
-    "scrolled": false
+    "collapsed": false
    },
    "outputs": [
     {
@@ -130,14 +129,6 @@
     "collapsed": false
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python2.7/dist-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
-      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -288,50 +279,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "____________________________________________________________________________________________________\n",
-      "Layer (type)                     Output Shape          Param #     Connected to                     \n",
-      "====================================================================================================\n",
-      "lstm_1 (LSTM)                    (1, 1, 200)           240800      lstm_input_1[0][0]               \n",
-      "____________________________________________________________________________________________________\n",
-      "dropout_1 (Dropout)              (1, 1, 200)           0           lstm_1[0][0]                     \n",
-      "____________________________________________________________________________________________________\n",
-      "lstm_2 (LSTM)                    (1, 1, 100)           120400      dropout_1[0][0]                  \n",
-      "____________________________________________________________________________________________________\n",
-      "dropout_2 (Dropout)              (1, 1, 100)           0           lstm_2[0][0]                     \n",
-      "____________________________________________________________________________________________________\n",
-      "lstm_3 (LSTM)                    (1, 50)               30200       dropout_2[0][0]                  \n",
-      "____________________________________________________________________________________________________\n",
-      "dropout_3 (Dropout)              (1, 50)               0           lstm_3[0][0]                     \n",
-      "____________________________________________________________________________________________________\n",
-      "dense_1 (Dense)                  (1, 50)               2550        dropout_3[0][0]                  \n",
-      "____________________________________________________________________________________________________\n",
-      "dropout_4 (Dropout)              (1, 50)               0           dense_1[0][0]                    \n",
-      "____________________________________________________________________________________________________\n",
-      "dense_2 (Dense)                  (1, 20)               1020        dropout_4[0][0]                  \n",
-      "____________________________________________________________________________________________________\n",
-      "dropout_5 (Dropout)              (1, 20)               0           dense_2[0][0]                    \n",
-      "____________________________________________________________________________________________________\n",
-      "dense_3 (Dense)                  (1, 5)                105         dropout_5[0][0]                  \n",
-      "====================================================================================================\n",
-      "Total params: 395075\n",
-      "____________________________________________________________________________________________________\n",
-      "None\n",
-      "('Epoch', 1, '/', 100)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING (theano.tensor.blas): We did not found a dynamic library into the library_dir of the library we use for blas. If you use ATLAS, make sure to compile it with dynamics library.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create the model and parameters for training\n",
     "numpy.random.seed(seed)\n",
@@ -503,6 +451,216 @@
     "print 'Best validation accuracy: ', get_max_values(val_accs)\n",
     "plot_training(accs, val_accs, losss, val_losss, kappas, aucs)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loading and evaluating the best models\n",
+    "\n",
+    "## 3-layer LSTM (Activity)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded model 3 from disk\n",
+      "3 Layer LSTM --- acc: 60.54%\n",
+      "Performance of model on test set ----------------------------\n",
+      "Accuracy:\n",
+      "0.605363984674\n",
+      "Kappa:\n",
+      "0.466174866304\n",
+      "Confusion matrix:\n",
+      "[[156   5  26  12   1]\n",
+      " [ 10 241  56  11   7]\n",
+      " [ 38  77 184  20  18]\n",
+      " [ 25  12  26  30   2]\n",
+      " [  6  45  11   4  21]]\n",
+      "AUC score:\n",
+      "0.776001092088\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.46617486630418714, 0.77600109208809753)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense\n",
+    "from keras.models import model_from_json\n",
+    "import numpy\n",
+    "import os\n",
+    "\n",
+    "# LOAD AND USE MODEL\n",
+    "json_file3 = open('activity.model--3lstmbis.json','r')\n",
+    "loaded_model_json3 = json_file3.read()\n",
+    "json_file3.close()\n",
+    "loaded_model3 = model_from_json(loaded_model_json3)\n",
+    "\n",
+    "# load weights into new model\n",
+    "loaded_model3.load_weights(\"activity.weights--3lstmbis.best.hdf5\")\n",
+    "print(\"Loaded model 3 from disk\")\n",
+    "# evaluate loaded model on test data\n",
+    "# IMPORTANT: compile the model again before use!\n",
+    "loaded_model3.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "score3 = loaded_model3.evaluate(testX, dummy_y_testA, batch_size=1, verbose=0)\n",
+    "print \"3 Layer LSTM --- %s: %.2f%%\" % (loaded_model3.metrics_names[1], score3[1]*100)\n",
+    "printValStats(loaded_model3,  testX, dummy_y_testA, batch=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2-layer LSTM (Activity)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded model 2 from disk\n",
+      "2 Layer LSTM --- acc: 62.74%\n",
+      "Performance of model on test set ----------------------------\n",
+      "Accuracy:\n",
+      "0.624521072797\n",
+      "Kappa:\n",
+      "0.487285752049\n",
+      "Confusion matrix:\n",
+      "[[161   5  25   9   0]\n",
+      " [  3 269  42   0  11]\n",
+      " [ 40  78 187  12  20]\n",
+      " [ 31  17  26  18   3]\n",
+      " [  4  61   5   0  17]]\n",
+      "AUC score:\n",
+      "0.808960195459\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.48728575204930102, 0.80896019545938724)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# LOAD AND USE MODEL\n",
+    "json_file2 = open('activity.model--2lstmbis.json','r')\n",
+    "loaded_model_json2 = json_file2.read()\n",
+    "json_file2.close()\n",
+    "loaded_model2 = model_from_json(loaded_model_json2)\n",
+    "\n",
+    "# load weights into new model\n",
+    "loaded_model2.load_weights(\"activity.weights--2lstmbis.best.hdf5\")\n",
+    "print(\"Loaded model 2 from disk\")\n",
+    "# evaluate loaded model on test data\n",
+    "# IMPORTANT: compile the model again before use!\n",
+    "loaded_model2.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "score2 = loaded_model2.evaluate(testX, dummy_y_testA, batch_size=1, verbose=0)\n",
+    "print \"2 Layer LSTM --- %s: %.2f%%\" % (loaded_model2.metrics_names[1], score2[1]*100)\n",
+    "printValStats(loaded_model2,  testX, dummy_y_testA, batch=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1-layer LSTM (Activity)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded model 1 from disk\n",
+      "1 Layer LSTM --- acc: 62.74%\n",
+      "Performance of model on test set ----------------------------\n",
+      "Accuracy:\n",
+      "0.621647509579\n",
+      "Kappa:\n",
+      "0.482466510546\n",
+      "Confusion matrix:\n",
+      "[[169   2  29   0   0]\n",
+      " [ 13 250  53   0   9]\n",
+      " [ 61  67 196   6   7]\n",
+      " [ 41  11  27  16   0]\n",
+      " [ 10  54   5   0  18]]\n",
+      "AUC score:\n",
+      "0.847622277625\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.4824665105456955, 0.84762227762486453)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# LOAD AND USE MODEL\n",
+    "json_file1 = open('activity.model--1lstmbis.json','r')\n",
+    "loaded_model_json1 = json_file1.read()\n",
+    "json_file1.close()\n",
+    "loaded_model1 = model_from_json(loaded_model_json1)\n",
+    "\n",
+    "# load weights into new model\n",
+    "loaded_model1.load_weights(\"activity.weights--1lstmbis.best.hdf5\")\n",
+    "print(\"Loaded model 1 from disk\")\n",
+    "# evaluate loaded model on test data\n",
+    "# IMPORTANT: compile the model again before use!\n",
+    "loaded_model1.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "score1 = loaded_model1.evaluate(testX, dummy_y_testA, batch_size=1, verbose=0)\n",
+    "print \"1 Layer LSTM --- %s: %.2f%%\" % (loaded_model1.metrics_names[1], score1[1]*100)\n",
+    "printValStats(loaded_model1,  testX, dummy_y_testA, batch=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
