--- a/notebooks/JLA-BaselineModels.ipynb
+++ b/notebooks/JLA-BaselineModels.ipynb
@@ -11,11 +11,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python2.7/dist-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
+      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy\n",
     "import pandas\n",
@@ -43,7 +52,7 @@
     "from sklearn.feature_selection import SelectKBest\n",
     "from sklearn.feature_selection import chi2, f_classif\n",
     "#TODO: try XGBoost... and StackNet for ensembling?\n",
-    "#import xgboost\n",
+    "import xgboost\n",
     "\n"
    ]
   },
